--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1,30 +1,25 @@
 :root {
-  --color: #243746;
-  --color-primary: #158876;
-  --color-secondary: #0e2233;
-  --color-url:#475569;
-  --color-url-hover:#0f172a;
-  --bg: #f3f5f4;
-  --bg-secondary: #fff;
-  --border-color: #ddd;
-  --bg-header: #ffffffbf;
   --height-header: 56px;
   --bg-footer: #fff;
   --height-footer: 40px;
+  --bg-secondary: #fff;
+  --border-color: #ddd;
+  --bg-header: #ffffffbf;
+}
+:root[theme-mode='light'] {
+  --color: #243746;
+  --color-primary: #158876;
+  --color-secondary: #0e2233;
+  --color-url: #475569;
+  --color-url-hover: #0f172a;
+  --bg: #f3f5f4;
 }
 
-.dark-mode {
+:root[theme-mode='dark'] {
   --color: #ebf4f1;
   --color-primary: #41b38a;
   --color-secondary: #fdf9f3;
   --bg: #091a28;
   --bg-secondary: #071521;
   --border-color: #0d2538;
-}
-.sepia-mode {
-  --color: #433422;
-  --color-secondary: #504231;
-  --bg: #f1e7d0;
-  --bg-secondary: #eae0c9;
-  --border-color: #ded0bf;
 }
