测试原子化CSS

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1,25 +1,195 @@
 :root {
   --height-header: 56px;
-  --bg-footer: #fff;
   --height-footer: 40px;
-  --bg-secondary: #fff;
-  --border-color: #ddd;
-  --bg-header: #ffffffbf;
+  --gray-color-1: #f3f3f3;
+  --gray-color-2: #eee;
+  --gray-color-3: #e7e7e7;
+  --gray-color-4: #dcdcdc;
+  --gray-color-5: #c5c5c5;
+  --gray-color-6: #a6a6a6;
+  --gray-color-7: #8b8b8b;
+  --gray-color-8: #777;
+  --gray-color-9: #5e5e5e;
+  --gray-color-10: #4b4b4b;
+  --gray-color-11: #383838;
+  --gray-color-12: #2c2c2c;
+  --gray-color-13: #242424;
+  --gray-color-14: #181818;
 }
-:root[theme-mode='light'] {
-  --color: #243746;
-  --color-primary: #158876;
-  --color-secondary: #0e2233;
-  --color-url: #475569;
-  --color-url-hover: #0f172a;
-  --bg: #f3f5f4;
-}
+.light-mode {
+  --brand-color-1: #eef4ff;
+  --brand-color-2: #d1e4ff;
+  --brand-color-3: #a3ccff;
+  --brand-color-4: #6bb2ff;
+  --brand-color-5: #0f95fb;
+  --brand-color-6: #007ad3;
+  --brand-color-7: #0060a8;
+  --brand-color-8: #004881;
+  --brand-color-9: #00325c;
+  --brand-color-10: #00203f;
+  --warning-color-1: #fef3e6;
+  --warning-color-2: #f9e0c7;
+  --warning-color-3: #f7c797;
+  --warning-color-4: #f2995f;
+  --warning-color-5: #ed7b2f;
+  --warning-color-6: #d35a21;
+  --warning-color-7: #ba431b;
+  --warning-color-8: #9e3610;
+  --warning-color-9: #842b0b;
+  --warning-color-10: #5a1907;
+  --error-color-1: #fdecee;
+  --error-color-2: #f9d7d9;
+  --error-color-3: #f8b9be;
+  --error-color-4: #f78d94;
+  --error-color-5: #f36d78;
+  --error-color-6: #e34d59;
+  --error-color-7: #c9353f;
+  --error-color-8: #b11f26;
+  --error-color-9: #951114;
+  --error-color-10: #680506;
+  --success-color-1: #e8f8f2;
+  --success-color-2: #bcebdc;
+  --success-color-3: #85dbbe;
+  --success-color-4: #48c79c;
+  --success-color-5: #00a870;
+  --success-color-6: #078d5c;
+  --success-color-7: #067945;
+  --success-color-8: #056334;
+  --success-color-9: #044f2a;
+  --success-color-10: #033017;
 
-:root[theme-mode='dark'] {
-  --color: #ebf4f1;
-  --color-primary: #41b38a;
-  --color-secondary: #fdf9f3;
-  --bg: #091a28;
-  --bg-secondary: #071521;
-  --border-color: #0d2538;
+  --brand-color: var(--brand-color-5);
+  --brand-main: var(--brand-color-5);
+  --brand-color-light: var(--brand-color-1);
+  --brand-color-focus: var(--brand-color-2);
+  --brand-color-disabled: var(--brand-color-3);
+  --brand-color-hover: var(--brand-color-4);
+  --brand-color-active: var(--brand-color-6);
+
+  /* 背景颜色 */
+  --bg-color-page: #f5f5f5;
+  --bg-color-secondarypage: #f5f5f5;
+  --bg-color-demo: #fff;
+  --bg-color-demo-secondary: #eee;
+  --bg-color-code: #f3f3f3;
+  --bg-color-code-linear: linear-gradient(180deg, rgba(243, 243, 243, 1) 0%, rgba(243, 243, 243, 0) 100%);
+  --bg-color-footer: #eee;
+  --bg-color-secondaryfooter: #e7e7e7;
+  --bg-color-docpage: #fff;
+  --bg-color-container: #fff;
+  --bg-color-container-transparent: rgba(255, 255, 255, 0.9);
+  --bg-color-secondarycontainer: #f5f5f5;
+  --bg-color-component: #eee;
+  --bg-color-component-transparent: rgba(238, 238, 238, 0.9);
+  --bg-color-tag: #eee;
+  --bg-color-tab: #eee;
+  --bg-color-table: #fff;
+  --bg-color-thead: #dcdcdc;
+  --bg-color-navigation: #fff;
+  --bg-color-card: #fff;
+
+  /* 字体颜色 */
+  --font-white-1: #ffffff;
+  --font-white-2: rgba(255, 255, 255, 0.55);
+  --font-white-3: rgba(255, 255, 255, 0.35);
+  --font-white-4: rgba(255, 255, 255, 0.22);
+  --font-gray-1: rgba(0, 0, 0, 0.9);
+  --font-gray-2: rgba(0, 0, 0, 0.6);
+  --font-gray-3: rgba(0, 0, 0, 0.4);
+  --font-gray-4: rgba(0, 0, 0, 0.26);
+  --text-color-primary: var(--font-gray-1);
+  --text-color-secondary: var(--font-gray-2);
+  --text-color-placeholder: var(--font-gray-3);
+  --text-color-disabled: var(--font-gray-4);
+  --text-color-anti: #fff;
+  --text-color-brand: var(--brand-color);
+  --text-color-link: var(--brand-color);
+}
+.dark-mode {
+  --brand-color-1: #0894fa20;
+  --brand-color-2: #00325c;
+  --brand-color-3: #004881;
+  --brand-color-4: #0060a8;
+  --brand-color-5: #007ad3;
+  --brand-color-6: #0894fa;
+  --brand-color-7: #6bb2ff;
+  --brand-color-8: #a3ccff;
+  --brand-color-9: #d1e4ff;
+  --brand-color-10: #eef4ff;
+  --warning-color-1: #4f2a1d;
+  --warning-color-2: #582f21;
+  --warning-color-3: #733c23;
+  --warning-color-4: #a75d2b;
+  --warning-color-5: #cf6e2d;
+  --warning-color-6: #dc7633;
+  --warning-color-7: #e8935c;
+  --warning-color-8: #ecbf91;
+  --warning-color-9: #eed7bf;
+  --warning-color-10: #f3e9dc;
+  --error-color-1: #472324;
+  --error-color-2: #5e2a2d;
+  --error-color-3: #703439;
+  --error-color-4: #83383e;
+  --error-color-5: #a03f46;
+  --error-color-6: #c64751;
+  --error-color-7: #de6670;
+  --error-color-8: #ec888e;
+  --error-color-9: #edb1b6;
+  --error-color-10: #eeced0;
+  --success-color-1: #193a2a;
+  --success-color-2: #1a4230;
+  --success-color-3: #17533d;
+  --success-color-4: #0d7a55;
+  --success-color-5: #059465;
+  --success-color-6: #43af8a;
+  --success-color-7: #46bf96;
+  --success-color-8: #80d2b6;
+  --success-color-9: #b4e1d3;
+  --success-color-10: #deede8;
+
+  --brand-main: var(--brand-color-6);
+  --brand-color-light: var(--brand-color-1);
+  --brand-color-focus: var(--brand-color-2);
+  --brand-color-disabled: var(--brand-color-3);
+  --brand-color-hover: var(--brand-color-5);
+  --brand-color: var(--brand-color-6);
+  --brand-color-active: var(--brand-color-7);
+
+  /* 背景颜色 */
+  --bg-color-page: #242424;
+  --bg-color-secondarypage: #181818;
+  --bg-color-demo: #181818;
+  --bg-color-demo-secondary: #181818;
+  --bg-color-code: #2c2c2c;
+  --bg-color-code-linear: linear-gradient(180deg, rgba(44, 44, 44, 1) 0%, rgba(44, 44, 44, 0) 100%);
+  --bg-color-footer: #181818;
+  --bg-color-secondaryfooter: #101010;
+  --bg-color-docpage: #242424;
+  --bg-color-container: #242424;
+  --bg-color-container-transparent: rgba(44, 44, 44, 0.9);
+  --bg-color-secondarycontainer: #383838;
+  --bg-color-component: #383838;
+  --bg-color-component-transparent: rgba(75, 75, 75, 0.9);
+  --bg-color-tag: #4b4b4b;
+  --bg-color-tab: #383838;
+  --bg-color-table: #242424;
+  --bg-color-thead: #4b4b4b;
+  --bg-color-navigation: #2c2c2c;
+  --bg-color-card: #383838;
+
+  --font-white-1: rgba(255, 255, 255, 0.9);
+  --font-white-2: rgba(255, 255, 255, 0.55);
+  --font-white-3: rgba(255, 255, 255, 0.35);
+  --font-white-4: rgba(255, 255, 255, 0.22);
+  --font-gray-1: rgba(0, 0, 0, 0.9);
+  --font-gray-2: rgba(0, 0, 0, 0.6);
+  --font-gray-3: rgba(0, 0, 0, 0.4);
+  --font-gray-4: rgba(0, 0, 0, 0.26);
+  --text-color-primary: var(--font-white-1);
+  --text-color-secondary: var(--font-white-2);
+  --text-color-placeholder: var(--font-white-3);
+  --text-color-disabled: var(--font-white-4);
+  --text-color-anti: #fff;
+  --text-color-brand: var(--brand-color);
+  --text-color-link: var(--brand-color);
 }
