refactor(layouts): 优化布局样式和结构，更新依赖版本
- 优化了桌面布局的样式和结构，调整了header和footer的样式
- 更新了依赖包版本，包括echarts、unocss、vue等
- 添加了moment插件和testData数据文件
- 调整了uno.config.ts中的主题配置和快捷方式
- 修改了nuxt.config.ts中的代理配置和兼容性日期

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1,6 +1,5 @@
 :root {
   --height-header: 56px;
-  --height-footer: 40px;
   --gray-color-1: #f3f3f3;
   --gray-color-2: #eee;
   --gray-color-3: #e7e7e7;
@@ -15,6 +14,10 @@
   --gray-color-12: #2c2c2c;
   --gray-color-13: #242424;
   --gray-color-14: #181818;
+  background-color: var(--bg-color-page);
+  transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 .light-mode {
   --brand-color-1: #eef4ff;
@@ -67,7 +70,7 @@
   --brand-color-active: var(--brand-color-6);
 
   /* 背景颜色 */
-  --bg-color-page: #f5f5f5;
+  --bg-color-page: #fff;
   --bg-color-secondarypage: #f5f5f5;
   --bg-color-demo: #fff;
   --bg-color-demo-secondary: #eee;
@@ -75,6 +78,7 @@
   --bg-color-code-linear: linear-gradient(180deg, rgba(243, 243, 243, 1) 0%, rgba(243, 243, 243, 0) 100%);
   --bg-color-footer: #eee;
   --bg-color-secondaryfooter: #e7e7e7;
+  --bg-color-borer: #e7e7e7;
   --bg-color-docpage: #fff;
   --bg-color-container: #fff;
   --bg-color-container-transparent: rgba(255, 255, 255, 0.9);
@@ -164,6 +168,7 @@
   --bg-color-code-linear: linear-gradient(180deg, rgba(44, 44, 44, 1) 0%, rgba(44, 44, 44, 0) 100%);
   --bg-color-footer: #181818;
   --bg-color-secondaryfooter: #101010;
+  --bg-color-borer: #101010;
   --bg-color-docpage: #242424;
   --bg-color-container: #242424;
   --bg-color-container-transparent: rgba(44, 44, 44, 0.9);
