--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1,6 +1,6 @@
 :root {
   --height-header: 56px;
-  --gray-color-1: #f3f3f3;
+  --gray-color-1: rgb(243, 243, 243);
   --gray-color-2: #eee;
   --gray-color-3: #e7e7e7;
   --gray-color-4: #dcdcdc;
